(ENHANCE) Port the 'Tools->Build' dialog to Ttk
(BUGFIX) The 'Select directory' had non-themed border around the dir tree
(ENHANCE) Ported the "Build Setting" dialog to Ttk
(ENHANCE) Added itk support for some ttk widgets
(ENHANCE) Port the 'Tools->Debugger' dialog to Ttk
(BUGFIX) The 'Scanning project' window wasn't fully ported to Ttk
(ENHANCE) Ported the 'Files not found' dialog to Ttk
(BUGFIX) Removed two 'puts' that were there for debugging
(ENHANCE) Port the "Revision Control Editor" to Ttk
(ENHANCE) Port the procedure sn_loading_message to Ttk
(ENHANCE) Port the selector mega widget to Ttk widgets
(ENHANCE) Port the Compare Revisions dialog to Ttk
(ENHANCE) Port the Revision control Lock and Unlock dialogs to Ttk
(ENHANCE) Port the 'Check In' dialog to Ttk
(ENHANCE) Port the 'Check Out' dialog to Ttk
(BUGFIX) Fix invoking the "Revision Control Editor" dialog
(INTERNAL) Removed sn_motif_buttons
(ENHANCE) Changed all sn_motif_buttons calls to sn_ttk_buttons
(INTERNAL) Removed tk_dialog as it is no longer used
(ENHANCE) Changed all tk_dialog calls to TtkDialog::ttk_dialog
(ENHANCE) Port the error that appears when parsing a file fails to ttk_dialog
(INTERNAL) Removed tk_dialog_with_widgets as it is no longer used
(BUGFIX) Used ttk_dialog_with_widgets without putting the namespace
(ENHANCE) Made the "Source-Navigator has found more than one match" warning use ttk_dialog_with_widges
(ENHANCE) Made sn_error_dialog use TtkDialog::MessageBox
(INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
(ENHANCE) Port the "About" dialog to Ttk
(BUGFIX) Forgot that someone may want to resize the "Abbreviations" dialog
(ENHANCE) Port the "Abbreviations" dialog to Ttk, now with scrollbar
(ENHANCE) Port the 'Find-Replace' dialog to Ttk
(ENHANCE) Port the 'Find dialog' to Ttk
(ENHANCE) Port the 'go to line' dialog to Ttk
(ENHANCE) Port the window with the progressbar when creating a new project
(ENHANCE) Port Tk's choose color dialog to Ttk Widgets